--- a/src/vue3/package.json
+++ b/src/vue3/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
+    "pinia": "^2.1.7",
     "vue": "^3.4.19"
   },
   "devDependencies": {
